...
                .padding()
                .frame(maxWidth: .infinity, maxHeight: 44)
                .background(Color("ButtonColor"))
                .foregroundColor(.white)
                .cornerRadius(22)
            }
            .accessibilityIdentifier("signInWithGoogleButton")
            .disabled(isSigningIn)
            .padding(.horizontal, 40)

            if let errorMessage = authViewModel.errorMessage {
                Text(errorMessage)
                    .foregroundColor(.red)
...
